--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ section{
 .work-heading{
     display: inline-block;
     margin-left: -650px;  
+    
 }
 
 /* My Latest work part ends here */
@@ -117,8 +118,8 @@ section{
     border-radius: 5px;
     width: 50%;
     padding: 10px 10px;
-    margin-left: 25%;
     font-weight: 500;
+    margin: 0 auto;
    
 }
 .clients-part{
