--- a/style.css
+++ b/style.css
@@ -51,34 +51,34 @@ section{
 .biography{
     background-image: url("images/biography-bg.png");
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: right;
     background-size: cover;
     position: relative;
 }
 /* Biography ends here */
 
 /* My Latest work part starts from here */
-
-.one-third img{
-    width: 90%;
-}
-
 * {
     box-sizing: border-box;
   }
   
-  .one-third {
+.one-third {
+    max-width: 33%;
+    padding-right: 1,5%;
+    padding-left: 1.5%;
     float: left;
-    width: 30%;
-    padding: 2px;
-    margin-left: 3%;
+    
   }
-  
-  .clearfix::after {
+
+.one-third img{
+    width: 100%;
+}
+.clearfix::after {
     content: "";
     clear: both;
     display: table;
-  }
+  } 
+
   .latest-work{
     background-image: url("images/latest-work-bg.png");
     background-repeat: no-repeat;
@@ -87,17 +87,17 @@ section{
     position: relative;
     text-align: center;
 }
-/* #heading{
+
+#heading{
     text-align: center;
-} */
+}
 
 .naming-heading{
     text-align: center;
 }
 .work-heading{
     display: inline-block;
-    margin-left: -650px;  
-    
+    margin-left: -650px;     
 }
 
 /* My Latest work part ends here */
@@ -134,6 +134,12 @@ section{
 /* Footer starts from here */
 .last-part{
     text-align: center;
-    color: dimgray;
+    color: white;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(185, 114, 202);
+    text-align: center;
+    padding:10px;
 }
 /* Footer ends here */
